# legacy-character-refactor

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: 01_legacy_problem.md  02_refactoring_strategy.md  03_architecture_overview.md  04_behavior_preserving_refactoring.md  05_risk_and_limitations.md  06_public_release_checklist.md
src/legacy/: LegacyCharacter.cpp  LegacyCharacter.h
src/refactored/: Character.cpp  Character.h  CharacterAccessor.cpp  CharacterAccessor.h  CharacterFactory.cpp  CharacterFactory.h  CharacterMath.cpp  CharacterMath.h  CharacterSlotStore.cpp  CharacterSlotStore.h  CharacterTypes.h
src/refactored/AI/: AiDispatcher.cpp  AiDispatcher.h
src/refactored/Data/: CharacterTuningTable.cpp  CharacterTuningTable.h  SkillDefinitionTable.cpp  SkillDefinitionTable.h
src/refactored/Effects/: TimedEffectList.cpp  TimedEffectList.h
src/refactored/Memory/: SimpleMemoryPool.h
src/refactored/Passive/: PassiveHandler.h  PassiveRegistry.cpp  PassiveRegistry.h
src/refactored/Projectile/: ShotPattern.cpp  ShotPattern.h
src/refactored/Return/: ReturnRequestModule.cpp  ReturnRequestModule.h
src/refactored/Skill/: SkillData.h  SkillExecutor.cpp  SkillExecutor.h
tests/: CharacterAccessorTests.cpp  CharacterEquivalenceTests.cpp  CharacterSlotStoreTests.cpp  RefactoredModuleDetailTests.cpp  VirtualHookOrderTests.cpp
